--- a/2022.md
+++ b/2022.md
@@ -1,9 +1,13 @@
 # 5月
 
+29日
+
+- 昨日のABC253のD、最小公倍数を忘れてた
+
 28日
 
 - まずは、Github Destop
-- 次は、VScode
+- 次は、VSCode
 - 最後に、Ubuntuからコミット
 - もう一度、Github Destop
 - ssh面倒かも、悩みどころ
