全体的に修正

--- a/2022.md
+++ b/2022.md
@@ -2,16 +2,18 @@
 
 30日
 
-- カクヨムのアカウント作った
+- カクヨムのアカウントを作った
+- 『コオロギの安息地』をカクヨムへ
 
 29日
 
-- 昨日のABC253のD、最小公倍数を忘れてた
+- 昨日のABC253のD、最小公倍数の存在を忘れてた
 
 28日
 
 - 久しぶりのGithub
+- sshとhttpsの使い分け
 
 27日
 
-- ブログ更新『コオロギの安息地』
+- ブログ更新、短編小説『コオロギの安息地』
