--- a/2022.md
+++ b/2022.md
@@ -4,6 +4,11 @@ https://kakuyomu.jp/users/yusuke_kato
 
 # 6月
 
+17日
+
+- 小説更新（木とそれ以外15）
+- ブログ記事執筆
+
 16日
 
 - 長谷川白紙おしゃれ
@@ -30,7 +35,7 @@ https://kakuyomu.jp/users/yusuke_kato
 
 10日
 
-- 小説更新（木とそれ以外13）
+- 小説更新（木とそれ以外13,14）
 - 伊藤計劃『虐殺器官』を読み途中
 
 9日
