--- a/2022.md
+++ b/2022.md
@@ -4,6 +4,12 @@ https://kakuyomu.jp/users/yusuke_kato
 
 # 6月
 
+25日
+
+- pixiv投稿
+- 私の小説を読んでいる人の感情が知りたい
+- 星新一ショートショートの平均文字数は5,000文字らしい
+
 24日
 
 - 小説更新（木とそれ以外19）
