--- a/2022.md
+++ b/2022.md
@@ -4,6 +4,22 @@ https://kakuyomu.jp/users/yusuke_kato
 
 # 7月
 
+24
+
+- LaTeX続き
+
+23
+
+- LaTeX続き
+
+22
+
+- LaTeX入門
+
+21
+
+- 動画編集
+
 20
 
 - 動画編集、区切り
